add missing html and css

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -30,20 +30,101 @@
                 <h5>Edit your content.</h5>
             </div>
             <div class="kori-edit__options">
-                <button><img src="_content/Kori/icons/Bold.svg" /></button>
-                <button><img src="_content/Kori/icons/Italic.svg" /></button>
-                <button><img src="_content/Kori/icons/Strikethrough.svg" /></button>
-                <button><img src="_content/Kori/icons/Union.svg" /></button>
-                <button><img src="_content/Kori/icons/Code.svg" /></button>
-                <button><img src="_content/Kori/icons/Quote.svg" /></button>
-                <button><img src="_content/Kori/icons/Numbered.svg" /></button>
-                <button><img src="_content/Kori/icons/Bullet.svg" /></button>
-                <button><img src="_content/Kori/icons/Attachment.svg" /></button>
-                <button><img src="_content/Kori/icons/Link.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Bold.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Italic.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Strikethrough.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Union.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Code.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Quote.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Numbered.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Bullet.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Attachment.svg" /></button>
+                <button class="kori__btn-icon"><img src="_content/Kori/icons/Link.svg" /></button>
             </div>
             <div class="kori-edit__actions">
                 <button class="kori-edit__cancel kori__btn">Cancel</button>
                 <button class="kori-edit__save kori__btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="kori-translation" class="kori-translation">
+        <div class="kori-translation__content">
+            <div class="kori-translation__back">
+                <button id="kori-translation__back" class="kori__btn-text">&lt;  Back</button>
+            </div>
+            <div class="kori-translation__header">
+                <h5>Translation</h5>
+                <div class="kori-translation__header-actions">
+                    <button><img src="kori/icons/Volume up.svg" /></button>
+                    <button><img src="kori/icons/Settings.svg" /></button>
+                </div>
+            </div>
+            <div class="kori-translation__options">
+                <div class="first-language">
+                    <select>
+                        <option>English</option>
+                        <option>Spanish</option>
+                        <option>Italian</option>
+                        <option>Mandarin</option>
+                        <option>Japanese</option>
+                        <option>Thai</option>
+                    </select>
+                </div>
+                <div class="swap-translation">
+                    <button class="swap-btn"><img src="kori/icons/Swap vertical.svg" /></button>
+                </div>
+                <div class="second-language">
+                    <select>
+                        <option>English</option>
+                        <option>Spanish</option>
+                        <option>Italian</option>
+                        <option>Mandarin</option>
+                        <option>Japanese</option>
+                        <option>Thai</option>
+                    </select>
+                </div>
+            </div>
+            <div class="kori-translation__actions">
+                <button class="kori-translation__cancel kori__btn">Reset</button>
+                <button class="kori-translation__save kori__btn-primary">Translate</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="kori-search" class="kori-search">
+        <div class="kori-search__content">
+            <div class="kori-search__back">
+                <button id="kori-search__back" class="kori__btn-text">&lt;  Back</button>
+            </div>
+            <div class="kori-search__header">
+                <h5>Content Navigation</h5>
+                <div class="kori-search__searchbar">
+                    <img src="kori/icons/Search.svg" />
+                    <input id="kori-searchbar" type="text" placeholder="Search Page/Content Name..." />
+                </div>
+            </div>
+            <div class="kori-search__list">
+                <div class="kori__content-container">
+                    <div class="kori__content-page">
+                        <img src="kori/icons/Page.svg" /> Content Page
+                    </div>
+                    <div class="kori__content-elements">
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                    </div>
+                </div>
+                <div class="kori__content-container">
+                    <div class="kori__content-page">
+                        <img src="kori/icons/Page.svg" /> Content Page
+                    </div>
+                    <div class="kori__content-elements">
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
