--- a/Kori/KoriWidget.razor.css
+++ b/Kori/KoriWidget.razor.css
@@ -159,6 +159,125 @@
 .kori-widget .kori-edit__actions button {
   width: 100%;
 }
+.kori-widget .kori-translation {
+  display: none;
+  width: 298px;
+  padding: 12px;
+  position: absolute;
+  top: 50%;
+  right: -322px;
+  transform: translateY(-50%);
+  background: var(--white);
+  text-align: left;
+}
+.kori-widget .kori-translation__back {
+  margin-bottom: 11px;
+  font-size: 14px;
+  line-height: 0;
+}
+.kori-widget .kori-translation__header {
+  display: flex;
+  justify-content: space-between;
+}
+.kori-widget .kori-translation__header h5 {
+  margin: auto 0;
+}
+.kori-widget .kori-translation__header-actions {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+.kori-widget .kori-translation__options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  flex-wrap: wrap;
+  margin: 30px 0;
+}
+.kori-widget .kori-translation__options select {
+  background: url("kori/icons/Chevron down.svg") no-repeat right white;
+  font-family: "Love Ya Like A Sister";
+  font-size: 14px;
+  line-height: 100%;
+}
+.kori-widget .kori-translation__options select option {
+  background-color: var(--white);
+  font-family: "Love Ya Like A Sister";
+  font-size: 14px;
+  line-height: 100%;
+}
+.kori-widget .kori-translation__options select option:hover {
+  background-color: var(--grey-200);
+}
+.kori-widget .kori-translation__options select option:checked {
+  background-color: none;
+}
+.kori-widget .kori-translation__options .swap-translation {
+  margin: 0 auto;
+}
+.kori-widget .kori-translation__actions {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 11px;
+}
+.kori-widget .kori-translation__actions button {
+  width: 100%;
+}
+.kori-widget .kori-search {
+  display: none;
+  width: 298px;
+  padding: 12px;
+  position: absolute;
+  top: 50%;
+  right: -322px;
+  transform: translateY(-50%);
+  background: var(--white);
+  text-align: left;
+}
+.kori-widget .kori-search__back {
+  margin-bottom: 11px;
+  font-size: 14px;
+  line-height: 0;
+}
+.kori-widget .kori-search__header {
+  margin-bottom: 24px;
+}
+.kori-widget .kori-search__header h5 {
+  margin-bottom: 8px;
+}
+.kori-widget .kori-search__header .kori-search__searchbar {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+.kori-widget .kori-search__header .kori-search__searchbar input {
+  padding: 4px;
+  border: none;
+}
+.kori-widget .kori-search__list {
+  width: 100%;
+  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.kori-widget .kori-search__list .kori__content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.kori-widget .kori-search__list .kori__content-container .kori__content-page {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  font-family: "Love Ya Like A Sister";
+  font-size: 14px;
+  line-height: 100%;
+}
 
 .kori__btn, .kori__btn-primary {
   padding: 0 !important;
@@ -187,7 +306,31 @@
   transition: 200ms ease-in-out !important;
 }
 
-.kori__border_black-10-8, .kori__btn, .kori__btn-primary {
+.kori__btn-icon, .kori-widget .kori-translation__header button, .kori-widget .kori-translation__options button {
+  display: flex;
+  height: 32px;
+  width: 32px;
+  padding: 4px;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: 1px solid var(--grey-200);
+  border-radius: 8px;
+  transition: 200ms ease-in-out;
+}
+.kori__btn-icon img, .kori-widget .kori-translation__header button img, .kori-widget .kori-translation__options button img {
+  max-width: 18px;
+  max-height: 18px;
+  margin: auto 0;
+}
+.kori__btn-icon:hover, .kori-widget .kori-translation__header button:hover, .kori-widget .kori-translation__options button:hover {
+  border: 1px solid var(--grey-700);
+}
+.kori__btn-icon:active, .kori-widget .kori-translation__header button:active, .kori-widget .kori-translation__options button:active {
+  border: 1px solid var(--grey-200);
+}
+
+.kori__border_black-10-8, .kori-widget .kori-translation__options select, .kori-widget .kori-search__header .kori-search__searchbar, .kori__btn, .kori__btn-primary {
   border: 10px solid transparent;
   border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
   border-image-outset: 2px;
@@ -201,7 +344,7 @@
   border-radius: 16px;
 }
 
-.kori__border-black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget .kori-edit {
+.kori__border_black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget .kori-edit, .kori-widget .kori-translation, .kori-widget .kori-search {
   border: 15px solid transparent;
   border-image: url("/_content/Kori/borders/black-16.svg") 15 round;
   border-image-outset: 4px;
