Update widget styles

--- a/Kori/KoriLogin.razor.css
+++ b/Kori/KoriLogin.razor.css
@@ -37,7 +37,10 @@
   padding: 0;
   border: none;
 }
-.kori-login__input input placeholder {
+.kori-login__input input::placeholder {
+  color: var(--grey-500);
+}
+.kori-login__input input:-ms-input-placeholder {
   color: var(--grey-500);
 }
 .kori-login__keep {
@@ -69,6 +72,7 @@
   background: none;
   border: 10px solid transparent;
   border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
+  font-style: normal;
 }
 .kori-login__actions button.kori-login__btn {
   width: calc(100% - 4px);
