--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -351,6 +351,7 @@
     line-height: 100% !important;
     text-align: center !important;
     transition: 200ms ease-in-out !important;
+    font-style: normal;
 }
 
 .kori__btn-primary {
