--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -1,4 +1,4 @@
-﻿<div id="kori-widget" class="kori-widget">
+﻿<div id="kori-widget" class="kori-widget kori-ignore">
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
         <img class="kori-buddy" src="_content/Kori/images/kori-buddy.svg" />
         <div class="kori-widget__content">
