--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -8,7 +8,7 @@
                     <button class="kori__btn-text">Edit</button>
                     <button class="kori__btn-text">Review</button>
                     <button id="dockButton" class="kori__btn-text" title="Dock">
-                        <img src="_content/Kori/images/dock-icon.svg" alt="Dock/Undock" />
+                        <img class="dock-icon" src="_content/Kori/images/dock-icon.svg" alt="Dock/Undock" />
                     </button>
                 </div>
             </div>
