add missing icons, html, css

--- a/Kori/KoriWidget.razor.css
+++ b/Kori/KoriWidget.razor.css
@@ -1,4 +1,14 @@
-﻿.kori-widget {
+﻿@font-face {
+  font-family: "Love Ya Like A Sister";
+  font-weight: 400;
+  src: url("/_content/Kori/fonts/LoveYaLikeASister-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "ArticulatCF";
+  font-weight: 500;
+  src: url("/_content/Kori/fonts/ArticulatCF-Medium.otf") format("opentype");
+}
+.kori-widget {
   display: none;
   position: absolute;
   height: 100%;
@@ -197,7 +207,7 @@
   margin: 30px 0;
 }
 .kori-widget .kori-translation__options select {
-  background: url("kori/icons/Chevron down.svg") no-repeat right white;
+  background: url("icons/Chevron down.svg") no-repeat right white;
   font-family: "Love Ya Like A Sister";
   font-size: 14px;
   line-height: 100%;
