--- a/SparcFeatures/app.scss
+++ b/SparcFeatures/app.scss
@@ -68,7 +68,7 @@
 
 // kori
 
-@font-face {
+/*@font-face {
     font-family: 'Love Ya Like A Sister';
     font-weight: 400;
     src: url('/kori/fonts/LoveYaLikeASister-Regular.ttf') format('truetype');
@@ -78,7 +78,7 @@
     font-family: 'ArticulatCF';
     font-weight: 500;
     src: url('/kori/fonts/ArticulatCF-Medium.otf') format('opentype');
-}
+}*/
 
 @import "Pages/KoriTestPage";
 
