--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -1,6 +1,6 @@
 ﻿<div id="kori-widget" class="kori-widget kori-ignore">
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
-        <img class="kori-buddy" src="_content/Kori/images/kori-buddy.svg" />
+        <img class="kori-buddy" src="/_content/Kori/images/kori-buddy.svg" />
         <div class="kori-widget__content">
             <div class="kori-widget__header">
                 <h5>How can I help you?</h5>
@@ -8,14 +8,14 @@
                     <button class="kori__btn-text">Edit</button>
                     <button class="kori__btn-text">Review</button>
                     <button id="dockButton" class="kori__btn-text" title="Dock">
-                        <img class="dock-icon" src="_content/Kori/images/dock-icon.svg" alt="Dock/Undock" />
+                        <img class="dock-icon" src="/_content/Kori/images/dock-icon.svg" alt="Dock/Undock" />
                     </button>
                 </div>
             </div>
             <div class="kori-widget__options">
                 <button class="options__edit kori__btn">Edit Content</button>
+                <button class="options__translation kori__btn">Translation</button>
                 <button class="options__ab kori__btn">A/B Testing</button>
-                <button class="options__publish kori__btn">Publish</button>
                 <button class="options__search kori__btn">Search</button>
             </div>
         </div>
@@ -30,16 +30,16 @@
                 <h5>Edit your content.</h5>
             </div>
             <div class="kori-edit__options">
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Bold.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Italic.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Strikethrough.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Union.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Code.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Quote.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Numbered.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Bullet.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Attachment.svg" /></button>
-                <button class="kori__btn-icon"><img src="_content/Kori/icons/Link.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Bold.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Italic.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Strikethrough.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Union.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Code.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Quote.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Numbered.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Bullet.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Attachment.svg" /></button>
+                <button class="kori__btn-icon"><img src="/_content/Kori/icons/Link.svg" /></button>
             </div>
             <div class="kori-edit__actions">
                 <button class="kori-edit__cancel kori__btn">Cancel</button>
@@ -56,8 +56,8 @@
             <div class="kori-translation__header">
                 <h5>Translation</h5>
                 <div class="kori-translation__header-actions">
-                    <button><img src="kori/icons/Volume up.svg" /></button>
-                    <button><img src="kori/icons/Settings.svg" /></button>
+                    <button><img src="/_content/Kori/icons/Volume up.svg" /></button>
+                    <button><img src="/_content/Kori/icons/Settings.svg" /></button>
                 </div>
             </div>
             <div class="kori-translation__options">
@@ -72,7 +72,7 @@
                     </select>
                 </div>
                 <div class="swap-translation">
-                    <button class="swap-btn"><img src="kori/icons/Swap vertical.svg" /></button>
+                    <button class="swap-btn"><img src="/_content/Kori/icons/Swap vertical.svg" /></button>
                 </div>
                 <div class="second-language">
                     <select>
@@ -100,29 +100,29 @@
             <div class="kori-search__header">
                 <h5>Content Navigation</h5>
                 <div class="kori-search__searchbar">
-                    <img src="kori/icons/Search.svg" />
+                    <img src="/_content/Kori/icons/Search.svg" />
                     <input id="kori-searchbar" type="text" placeholder="Search Page/Content Name..." />
                 </div>
             </div>
             <div class="kori-search__list">
                 <div class="kori__content-container">
                     <div class="kori__content-page">
-                        <img src="kori/icons/Page.svg" /> Content Page
+                        <img src="/_content/Kori/icons/Page.svg" /> Content Page
                     </div>
                     <div class="kori__content-elements">
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
                     </div>
                 </div>
                 <div class="kori__content-container">
                     <div class="kori__content-page">
-                        <img src="kori/icons/Page.svg" /> Content Page
+                        <img src="/_content/Kori/icons/Page.svg" /> Content Page
                     </div>
                     <div class="kori__content-elements">
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
                     </div>
                 </div>
             </div>
