--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -139,7 +139,7 @@
 
     .kori-edit {
         @extend .kori__border_black-15-16;
-        display: none;
+        //display: none;
         width: 298px;
         padding: 12px;
         position: absolute;
