install markdown packages, update kori widget menus to use blazor

--- a/Kori/KoriContent.razor
+++ b/Kori/KoriContent.razor
@@ -6,6 +6,9 @@
 <Kori.KoriLogin />
 <Kori.KoriWidget />
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+
 @inject Kori Kori
 @inject NavigationManager Nav
 @code {
