--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -17,9 +17,9 @@
                 </div>
                 <div class="kori-widget__options">
                     <button class="options__edit kori__btn" @onclick=Kori.EditAsync>Edit Content</button>
-                    <button class="options__translation kori__btn">Translation</button>
+                    <button class="options__translation kori__btn" @onclick=Kori.OpenTranslationMenu>Translation</button>
                     <button class="options__ab kori__btn">A/B Testing</button>
-                    <button class="options__search kori__btn">Search</button>
+                    <button class="options__search kori__btn" @onclick=Kori.OpenSearchMenu>Search</button>
                 </div>
             </div>
         </div>
@@ -52,88 +52,90 @@
                 </div>
             </div>
         </div>
+    } else if (Kori.Mode == "Translate") 
+    {
+        <div id="kori-translation" class="kori-translation">
+            <div class="kori-translation__content">
+                <div class="kori-translation__back">
+                    <button id="kori-translation__back" class="kori__btn-text" @onclick="Kori.CancelAsync">&lt;  Back</button>
+                </div>
+                <div class="kori-translation__header">
+                    <h5>Translation</h5>
+                    <div class="kori-translation__header-actions">
+                        <button><img src="/_content/Kori/icons/Volume up.svg" /></button>
+                        <button><img src="/_content/Kori/icons/Settings.svg" /></button>
+                    </div>
+                </div>
+                <div class="kori-translation__options">
+                    <div class="first-language">
+                        <select>
+                            <option>English</option>
+                            <option>Spanish</option>
+                            <option>Italian</option>
+                            <option>Mandarin</option>
+                            <option>Japanese</option>
+                            <option>Thai</option>
+                        </select>
+                    </div>
+                    <div class="swap-translation">
+                        <button class="swap-btn"><img src="/_content/Kori/icons/Swap vertical.svg" /></button>
+                    </div>
+                    <div class="second-language">
+                        <select>
+                            <option>English</option>
+                            <option>Spanish</option>
+                            <option>Italian</option>
+                            <option>Mandarin</option>
+                            <option>Japanese</option>
+                            <option>Thai</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="kori-translation__actions">
+                    <button class="kori-translation__cancel kori__btn">Reset</button>
+                    <button class="kori-translation__save kori__btn-primary">Translate</button>
+                </div>
+            </div>
+        </div>
+    } else if (Kori.Mode == "Search") 
+    {
+        <div id="kori-search" class="kori-search">
+            <div class="kori-search__content">
+                <div class="kori-search__back">
+                    <button id="kori-search__back" class="kori__btn-text" @onclick="Kori.CancelAsync">&lt;  Back</button>
+                </div>
+                <div class="kori-search__header">
+                    <h5>Content Navigation</h5>
+                    <div class="kori-search__searchbar">
+                        <img src="/_content/Kori/icons/Search.svg" />
+                        <input id="kori-searchbar" type="text" placeholder="Search Page/Content Name..." />
+                    </div>
+                </div>
+                <div class="kori-search__list">
+                    <div class="kori__content-container">
+                        <div class="kori__content-page">
+                            <img src="/_content/Kori/icons/Page.svg" /> Content Page
+                        </div>
+                        <div class="kori__content-elements">
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        </div>
+                    </div>
+                    <div class="kori__content-container">
+                        <div class="kori__content-page">
+                            <img src="/_content/Kori/icons/Page.svg" /> Content Page
+                        </div>
+                        <div class="kori__content-elements">
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                            <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     }
-
-    <div id="kori-translation" class="kori-translation">
-        <div class="kori-translation__content">
-            <div class="kori-translation__back">
-                <button id="kori-translation__back" class="kori__btn-text">&lt;  Back</button>
-            </div>
-            <div class="kori-translation__header">
-                <h5>Translation</h5>
-                <div class="kori-translation__header-actions">
-                    <button><img src="/_content/Kori/icons/Volume up.svg" /></button>
-                    <button><img src="/_content/Kori/icons/Settings.svg" /></button>
-                </div>
-            </div>
-            <div class="kori-translation__options">
-                <div class="first-language">
-                    <select>
-                        <option>English</option>
-                        <option>Spanish</option>
-                        <option>Italian</option>
-                        <option>Mandarin</option>
-                        <option>Japanese</option>
-                        <option>Thai</option>
-                    </select>
-                </div>
-                <div class="swap-translation">
-                    <button class="swap-btn"><img src="/_content/Kori/icons/Swap vertical.svg" /></button>
-                </div>
-                <div class="second-language">
-                    <select>
-                        <option>English</option>
-                        <option>Spanish</option>
-                        <option>Italian</option>
-                        <option>Mandarin</option>
-                        <option>Japanese</option>
-                        <option>Thai</option>
-                    </select>
-                </div>
-            </div>
-            <div class="kori-translation__actions">
-                <button class="kori-translation__cancel kori__btn">Reset</button>
-                <button class="kori-translation__save kori__btn-primary">Translate</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="kori-search" class="kori-search">
-        <div class="kori-search__content">
-            <div class="kori-search__back">
-                <button id="kori-search__back" class="kori__btn-text">&lt;  Back</button>
-            </div>
-            <div class="kori-search__header">
-                <h5>Content Navigation</h5>
-                <div class="kori-search__searchbar">
-                    <img src="/_content/Kori/icons/Search.svg" />
-                    <input id="kori-searchbar" type="text" placeholder="Search Page/Content Name..." />
-                </div>
-            </div>
-            <div class="kori-search__list">
-                <div class="kori__content-container">
-                    <div class="kori__content-page">
-                        <img src="/_content/Kori/icons/Page.svg" /> Content Page
-                    </div>
-                    <div class="kori__content-elements">
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                    </div>
-                </div>
-                <div class="kori__content-container">
-                    <div class="kori__content-page">
-                        <img src="/_content/Kori/icons/Page.svg" /> Content Page
-                    </div>
-                    <div class="kori__content-elements">
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                        <div class="kori__content-item"><img src="/_content/Kori/icons/Components.svg" /> Content Name</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 @inject Kori Kori
