Add font-weight to login title

--- a/Kori/KoriLogin.razor.scss
+++ b/Kori/KoriLogin.razor.scss
@@ -25,6 +25,7 @@
         font-family: 'Love Ya Like A Sister' !important;
         font-size: 14px;
         color: var(--grey-900);
+        font-weight: 400;
     }
 
     &__header {
