--- a/Kori/KoriLogin.razor.css
+++ b/Kori/KoriLogin.razor.css
@@ -22,6 +22,7 @@
   font-family: "Love Ya Like A Sister" !important;
   font-size: 14px;
   color: var(--grey-900);
+  font-weight: 400;
 }
 .kori-login__header {
   margin-bottom: 12px;
