--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -53,10 +53,12 @@
         .kori-widget__actions {
             top: 0;
             transform: translateY(0);
+            width: 300px;
         }
 
         .kori-widget__content {
             border: none;
+            border-radius: 0;
         }
 
         .kori-edit {
