--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -19,6 +19,7 @@
     right: 0;
     z-index: 1000;
     transition: 200ms ease-in-out;
+    -webkit-text-stroke: initial;
 
     &.show, .show {
         display: block !important;
