--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -48,7 +48,7 @@
                 </div>
                 <div class="kori-edit__actions">
                     <button class="kori-edit__cancel kori__btn" @onclick="Kori.CancelAsync">Cancel</button>
-                    <button class="kori-edit__save kori__btn-primary" @onclick="Kori.SaveAsync">Save</button>
+                    <button class="kori-edit__save kori__btn-primary" @onclick="Kori.BeginSaveAsync">Save</button>
                 </div>
             </div>
         </div>
