--- a/Kori/KoriWidget.razor.css
+++ b/Kori/KoriWidget.razor.css
@@ -138,19 +138,19 @@
       filter: opacity(1);
   }*/
 }
-.kori-widget .kori-edit {
-  width: 298px;
+.kori-widget__actions .kori-edit {
+  width: 300px;
   padding: 12px;
-  position: absolute;
+  /*position: absolute;*/
   background: var(--white);
   text-align: left;
 }
-.kori-widget .kori-edit__back {
+.kori-widget__actions .kori-edit__back {
   margin-bottom: 11px;
   font-size: 14px;
   line-height: 0;
 }
-.kori-widget .kori-edit__options {
+.kori-widget__actions .kori-edit__options {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -158,7 +158,7 @@
   flex-wrap: wrap;
   margin: 30px 0;
 }
-.kori-widget .kori-edit__options button {
+.kori-widget__actions .kori-edit__options button {
   display: flex;
   height: 32px;
   width: 32px;
@@ -170,46 +170,45 @@
   border-radius: 8px;
   transition: 200ms ease-in-out;
 }
-.kori-widget .kori-edit__options button img {
+.kori-widget__actions .kori-edit__options button img {
   max-width: 18px;
   max-height: 18px;
   margin: auto 0;
 }
-.kori-widget .kori-edit__actions {
+.kori-widget__actions .kori-edit__actions {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 11px;
 }
-.kori-widget .kori-edit__actions button {
+.kori-widget__actions .kori-edit__actions button {
   width: 100%;
 }
-.kori-widget .kori-translation {
+.kori-widget__actions .kori-translation {
   width: 298px;
   padding: 12px;
-  position: absolute;
   background: var(--white);
   text-align: left;
 }
-.kori-widget .kori-translation__back {
+.kori-widget__actions .kori-translation__back {
   margin-bottom: 11px;
   font-size: 14px;
   line-height: 0;
 }
-.kori-widget .kori-translation__header {
+.kori-widget__actions .kori-translation__header {
   display: flex;
   justify-content: space-between;
 }
-.kori-widget .kori-translation__header h5 {
+.kori-widget__actions .kori-translation__header h5 {
   margin: auto 0;
 }
-.kori-widget .kori-translation__header-actions {
+.kori-widget__actions .kori-translation__header-actions {
   display: flex;
   flex-direction: row;
   gap: 8px;
 }
-.kori-widget .kori-translation__options {
+.kori-widget__actions .kori-translation__options {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -217,77 +216,76 @@
   flex-wrap: wrap;
   margin: 30px 0;
 }
-.kori-widget .kori-translation__options select {
+.kori-widget__actions .kori-translation__options select {
   background: url("icons/Chevron down.svg") no-repeat right white;
   font-family: "Love Ya Like A Sister";
   font-size: 14px;
   line-height: 100%;
 }
-.kori-widget .kori-translation__options select option {
+.kori-widget__actions .kori-translation__options select option {
   background-color: var(--white);
   font-family: "Love Ya Like A Sister";
   font-size: 14px;
   line-height: 100%;
 }
-.kori-widget .kori-translation__options select option:hover {
+.kori-widget__actions .kori-translation__options select option:hover {
   background-color: var(--grey-200);
 }
-.kori-widget .kori-translation__options select option:checked {
+.kori-widget__actions .kori-translation__options select option:checked {
   background-color: none;
 }
-.kori-widget .kori-translation__options .swap-translation {
+.kori-widget__actions .kori-translation__options .swap-translation {
   margin: 0 auto;
 }
-.kori-widget .kori-translation__actions {
+.kori-widget__actions .kori-translation__actions {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 11px;
 }
-.kori-widget .kori-translation__actions button {
+.kori-widget__actions .kori-translation__actions button {
   width: 100%;
 }
-.kori-widget .kori-search {
+.kori-widget__actions .kori-search {
   width: 298px;
   padding: 12px;
-  position: absolute;
   background: var(--white);
   text-align: left;
 }
-.kori-widget .kori-search__back {
+.kori-widget__actions .kori-search__back {
   margin-bottom: 11px;
   font-size: 14px;
   line-height: 0;
 }
-.kori-widget .kori-search__header {
+.kori-widget__actions .kori-search__header {
   margin-bottom: 24px;
 }
-.kori-widget .kori-search__header h5 {
+.kori-widget__actions .kori-search__header h5 {
   margin-bottom: 8px;
 }
-.kori-widget .kori-search__header .kori-search__searchbar {
+.kori-widget__actions .kori-search__header .kori-search__searchbar {
   display: flex;
   flex-direction: row;
   gap: 8px;
 }
-.kori-widget .kori-search__header .kori-search__searchbar input {
+.kori-widget__actions .kori-search__header .kori-search__searchbar input {
   padding: 4px;
   border: none;
 }
-.kori-widget .kori-search__list {
+.kori-widget__actions .kori-search__list {
   width: 100%;
   padding: 0 24px;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.kori-widget .kori-search__list .kori__content-container {
+.kori-widget__actions .kori-search__list .kori__content-container {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.kori-widget .kori-search__list .kori__content-container .kori__content-page {
+.kori-widget__actions .kori-search__list .kori__content-container .kori__content-page, .kori-widget__actions .kori-search__list .kori__content-container .kori__content-item {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -326,7 +324,7 @@
   font-style: normal;
 }
 
-.kori__btn-icon, .kori-widget .kori-translation__header button, .kori-widget .kori-translation__options button {
+.kori__btn-icon, .kori-widget__actions .kori-translation__header button, .kori-widget__actions .kori-translation__options button {
   display: flex;
   height: 32px;
   width: 32px;
@@ -338,19 +336,19 @@
   border-radius: 8px;
   transition: 200ms ease-in-out;
 }
-.kori__btn-icon img, .kori-widget .kori-translation__header button img, .kori-widget .kori-translation__options button img {
+.kori__btn-icon img, .kori-widget__actions .kori-translation__header button img, .kori-widget__actions .kori-translation__options button img {
   max-width: 18px;
   max-height: 18px;
   margin: auto 0;
 }
-.kori__btn-icon:hover, .kori-widget .kori-translation__header button:hover, .kori-widget .kori-translation__options button:hover {
+.kori__btn-icon:hover, .kori-widget__actions .kori-translation__header button:hover, .kori-widget__actions .kori-translation__options button:hover {
   border: 1px solid var(--grey-700);
 }
-.kori__btn-icon:active, .kori-widget .kori-translation__header button:active, .kori-widget .kori-translation__options button:active {
+.kori__btn-icon:active, .kori-widget__actions .kori-translation__header button:active, .kori-widget__actions .kori-translation__options button:active {
   border: 1px solid var(--grey-200);
 }
 
-.kori__border_black-10-8, .kori-widget .kori-translation__options select, .kori-widget .kori-search__header .kori-search__searchbar, .kori__btn, .kori__btn-primary {
+.kori__border_black-10-8, .kori-widget__actions .kori-translation__options select, .kori-widget__actions .kori-search__header .kori-search__searchbar, .kori__btn, .kori__btn-primary {
   border: 10px solid transparent;
   border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
   border-image-outset: 2px;
@@ -364,7 +362,7 @@
   border-radius: 16px;
 }
 
-.kori__border_black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget .kori-edit, .kori-widget .kori-translation, .kori-widget .kori-search {
+.kori__border_black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget__actions .kori-edit, .kori-widget__actions .kori-translation, .kori-widget__actions .kori-search {
   border-image: url("/_content/Kori/borders/black-16.svg") 15 round;
   border-image-outset: 2px;
   border-radius: 16px;
