--- a/SparcFeatures/Html.razor
+++ b/SparcFeatures/Html.razor
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/dda1jal.css">
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(false)" />
     <PageTitle>Sparc Cooperative</PageTitle>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 </head>
 
 <body>
