--- a/SparcFeatures/Html.razor
+++ b/SparcFeatures/Html.razor
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/dda1jal.css">
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(false)" />
     <PageTitle>Sparc Cooperative</PageTitle>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/markdowneditor.css" rel="stylesheet" />
+    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
 </head>
 
 <body>
