--- a/SparcFeatures/Html.razor
+++ b/SparcFeatures/Html.razor
@@ -14,6 +14,7 @@
     <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
     <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
     <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
+    <script src="https://unpkg.com/turndown/dist/turndown.js"></script>
 </head>
 
 <body>
